# cmake-examples-cpp-otus

./: .gitignore  CMakeLists.txt  README.md
example1/: CMakeLists.txt  main.cpp
example2/: CMakeLists.txt  main.cpp  version.cpp  version.h
example3/: CMakeLists.txt  main.cpp  version.cpp  version.h
example4/: CMakeLists.txt
example4/lib/: CMakeLists.txt  lib.cpp  lib.h
example4/src/: CMakeLists.txt  main.cpp
example5/: CMakeLists.txt  build.sh
example5/src/: CMakeLists.txt
example5/sumLib/: CMakeLists.txt  sumLib.cpp  sumLib.h
example6/: CMakeLists.txt  build.sh  main.cpp
example6/cmake/: FindsumLib.cmake
example7/: CMakeLists.txt
example7/example/: CMakeLists.txt  main.cpp
example7/src/: CMakeLists.txt  logger.cpp  logger.h
example8/: CMakeLists.txt  main.cpp  math.cpp  math.h
